cabal-version:      2.4
name:               yam001
version:            1.0.0
description:        Yamfore MVP prototype
license:            Apache-2.0
author:             Sean Ishan Sivakumaran
maintainer:         yamfore.com
build-type:         Simple

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wincomplete-uni-patterns
                        -Wmissing-export-lists
                        -Wpartial-fields
                        -Wmissing-deriving-strategies
                        -Wunused-packages

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      Treasury.TreasuryValidator
                        Treasury.TreasuryTypes
                        Treasury.TreasuryCompiler
                        Loan.LoanValidator
                        Loan.LoanTypes
                        Loan.LoanCompiler
                        Mint.MintValidator
                        Stake.StakeValidator
                        Arb.ArbValidator
                        Param.ParamTypes
                        ToJSON

  build-depends:        bytestring
                      , cardano-api
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-ledger-constraints
                      , plutus-tx
                      , plutus-tx-plugin
                      , plutus-script-utils
                      , serialise
                      , aeson
                      , text

  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas